--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ Bold: 700
 
 - Line heights
 Default: 1
+1.2
+1.5
 
 
 - Letter spacing
@@ -57,6 +59,7 @@ body {
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -64,10 +67,12 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  position: relative;
 }
 
 /* NAVIGATION */
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,6 +80,10 @@ body {
 
   height: 9.6rem;
   padding: 4.8rem 25.6rem;
+
+  /* position: fixed;
+  top: 0;
+  z-index: 99; */
 }
 
 .logo-link:link,
@@ -159,28 +168,10 @@ body {
   cursor: pointer;
 }
 
-.learn-more:link,
-.learn-more:visited {
-  display: inline-block;
-
-  text-decoration: none;
+.learn-more--hero {
   font-size: 2rem;
   font-weight: 600;
   padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-
-  /* Only necessary for .btn */
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
-
-  background-color: #dff1f7;
-}
-
-.learn-more:hover,
-.learn-more:active {
-  cursor: pointer;
-  background-color: #ceeaf3;
 }
 
 .logos {
@@ -226,18 +217,8 @@ body {
   align-items: center;
 }
 
-.education-card-textbox {
-  padding-right: 4.8rem;
-}
-
 .education-card-header {
   margin-top: 1.6rem;
-}
-
-.education-card-title {
-  font-weight: 600;
-  font-size: 3.6rem;
-  margin-bottom: 1.6rem;
 }
 
 .education-card-list {
@@ -256,7 +237,17 @@ body {
   gap: 1.6rem;
 }
 
-.education-card-imgbox {
+.card-textbox {
+  padding-right: 4.8rem;
+}
+
+.card-title {
+  font-weight: 600;
+  font-size: 3.6rem;
+  margin-bottom: 1.6rem;
+}
+
+.card-imgbox {
   justify-self: center;
   align-self: center;
 }
@@ -272,10 +263,11 @@ body {
 .carousel {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  position: relative;
 }
+
 .container-carousel {
   position: relative;
-  display: flex;
 }
 
 .carousel-exp {
@@ -284,6 +276,7 @@ body {
   max-width: 130rem;
   display: flex;
   gap: 3.2rem;
+  position: relative;
 }
 
 .cover--left,
@@ -291,28 +284,28 @@ body {
   width: 100%;
   height: 85%;
   margin-top: 3.6rem;
+  z-index: 1;
 }
+
 .cover--left {
   background: linear-gradient(
     to left,
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 1)
   );
-  z-index: 1;
 }
+
 .cover--right {
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 1)
   );
-  z-index: 1;
 }
 
 .exp-item {
   width: 37rem;
   max-height: 40rem;
-  border-radius: 9px;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.06);
   border-radius: 12px;
   padding: 1.2rem;
@@ -332,7 +325,7 @@ body {
 }
 
 .exp-title {
-  display: inline-block;
+  display: block;
   font-size: 2.4rem;
   margin-bottom: 2rem;
 }
@@ -363,13 +356,224 @@ body {
 }
 
 /* ****************** */
+/* EXPERIENCE BOX */
+/* ****************** */
+.content-box {
+  /* transform: translateY(-25rem); */
+  margin: 0 auto;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.08);
+  /* box-shadow: none; */
+
+  max-height: 40rem;
+
+  max-width: 120rem;
+  visibility: visible;
+  /* z-index: -99; */
+}
+
+.exp-box {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  gap: 3rem;
+  align-items: center;
+
+  padding: 1.6rem 3.2rem;
+
+  /* To match card 1 */
+  /* transform: translateX(-2%); */
+
+  transition: all 0.4s;
+}
+
+.exp-title--box {
+  display: block;
+  font-size: 2.4rem;
+}
+
+.exp-time {
+  display: block;
+  font-size: 1.6rem;
+  margin-top: 0.8rem;
+}
+
+.exp-textbox {
+  padding: 1.6rem;
+}
+
+.exp-content-text {
+  margin-top: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.exp-content-text li {
+  font-size: 1.8rem;
+}
+
+.exp-card-imgbox {
+  padding: 1.2rem;
+}
+
+.exp-card-imgbox > img {
+  width: 100%;
+}
+
+.exp-card-imgbox > .exp-img-rec {
+  padding: 1.2rem;
+}
+
+/* ****************** */
 /* PROJECTS */
 /* ****************** */
+.container--proj {
+  gap: 3.2rem;
+}
+
+.proj-card {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.08);
+  padding: 2.4rem 1.6rem 4.8rem;
+  position: relative;
+  border-radius: 9px;
+
+  display: grid;
+  grid-template-rows: 5fr 8fr;
+}
+
+.proj-heading {
+  font-weight: 500;
+  font-size: 3rem;
+}
+
+.proj-feat {
+  list-style: none;
+  display: flex;
+  gap: 0.8rem;
+  margin-top: 1.2rem;
+}
+
+.proj-feat li {
+  font-size: 1.6rem;
+  font-weight: 500;
+  padding: 0.6rem 1.6rem;
+  border-radius: 999px;
+  /* background-color: orange; */
+}
+
+.proj-text {
+  margin: 0.4rem 0 2.4rem 0.8rem;
+  line-height: 1.5;
+  font-size: 1.6rem;
+}
+
+.proj-desc {
+  margin: 2.4rem 0 3.2rem 0.8rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.proj-desc li {
+  font-size: 1.6rem;
+}
+
+.learn-more--proj {
+  font-size: 1.6rem;
+  padding: 1.2rem 2.4rem;
+
+  position: absolute;
+  bottom: 1.6rem;
+  left: 2.4rem;
+}
+
+/* *************************** */
+/* CONTACT ME BOX */
+/* *************************** */
+.contact-box {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  backdrop-filter: blur(5px);
+  z-index: 999;
+}
+
+form[name="contact-form"] {
+  display: block;
+  height: 600px;
+  width: 1000px;
+
+  background-color: #fff;
+}
+
+/* *************************** */
+/* LANGUAGE/FRAMEWORK COLORS */
+/* *************************** */
+.lang--c {
+  background-color: #ffc078;
+}
+
+.lang--python {
+  background-color: greenyellow;
+}
+
+.lang--ocaml {
+  background-color: #63e6be;
+}
+
+.lang--html {
+  background-color: #e5dbff;
+}
+
+.lang--css {
+  background-color: #99e9f2;
+}
+
+.lang--js {
+  background-color: #fff0f6;
+}
+
+.fw--np {
+  background-color: #ffc9c9;
+}
+
+.fw--opencv {
+  background-color: #fff3bf;
+}
 
 /* *************************** */
 /* GENERAL REUSABLE COMPONENTS */
+/* *************************** */
+.learn-more:link,
+.learn-more:visited {
+  display: inline-block;
+
+  text-decoration: none;
+
+  border-radius: 9px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  color: #555;
+  background-color: #dff1f7;
+}
+
+.learn-more:hover,
+.learn-more:active {
+  background-color: #ceeaf3;
+}
+
 .container {
-  max-width: 130rem;
+  max-width: 140rem;
   padding: 0 3.2rem;
   margin: 0 auto;
 }
@@ -378,12 +582,27 @@ body {
   display: none;
 }
 
+.invisible {
+  visibility: hidden;
+  opacity: 0%;
+  max-height: 0;
+}
+
+.hideup {
+  display: none;
+  transform: translateY(-150%);
+}
+
 .grid {
   display: grid;
 }
 
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
+}
+
+.margin-top-title {
+  margin-top: 2.4rem !important;
 }
 
 section {
