--- a/style.css
+++ b/style.css
@@ -107,6 +107,16 @@ body {
   font-size: 2.4rem;
   text-decoration: none;
   color: #333;
+
+  cursor: pointer;
+
+  transition: all 0.4s ease-in;
+  text-underline-offset: 5px;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  text-decoration: underline;
 }
 
 /* -------------------------- */
@@ -497,20 +507,107 @@ body {
   top: 0;
   left: 0;
 
+  /* backdrop-filter: blur(5px); */
+}
+
+.contact-box--background {
+  width: 100%;
+  height: 100vh;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.contact-box--background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
 
   backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.contact-content {
+  padding: 4rem 1.6rem 1.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.4rem;
+
+  width: 600px;
+
+  border-radius: 9px;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.05);
+
+  background-color: #fff;
+
+  position: relative;
   z-index: 999;
 }
 
-form[name="contact-form"] {
-  display: block;
-  height: 600px;
-  width: 1000px;
+.contact-title {
+  font-size: 3.6rem;
+}
 
-  background-color: #fff;
+form[name="contact-form"] {
+  width: 90%;
+}
+
+form[name="contact-form"] label {
+  display: block;
+  font-size: 2rem;
+  margin-bottom: 0.6rem;
+}
+
+.name,
+.email {
+  font-weight: 500;
+  font-size: 2rem;
+}
+.msg-box,
+.name,
+.email {
+  display: block;
+  padding: 0.8rem;
+  width: 100%;
+
+  margin-bottom: 2rem;
+}
+
+.msg-box {
+  font-size: 1.6rem;
+}
+
+.form-submit input {
+  margin: 1.6rem 0;
+  padding: 0.8rem;
+  width: 100%;
+  text-align: center;
+  font-size: 2.4rem;
+
+  border-radius: 5px;
+  border: 1px solid #555;
+
+  cursor: pointer;
+}
+
+.form-submit input:hover {
+  background-color: #ddd;
+}
+
+.contact-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 3.6rem;
+
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 /* *************************** */
