--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html {
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -118,7 +118,7 @@ body {
 
 .main-nav-link:link::before {
   position: absolute;
-  content: "";
+  content: '';
 
   width: 100%;
   height: 2px;
@@ -392,20 +392,16 @@ body {
 /* ****************** */
 /* EXPERIENCE BOX */
 /* ****************** */
-.content-box {
-  /* transform: translateY(-25rem); */
+
+.exp-box {
+  transition: opacity 0.4s;
+
   margin: 0 auto;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.08);
-  /* box-shadow: none; */
-
   max-height: 40rem;
 
   max-width: 120rem;
-  visibility: visible;
-  /* z-index: -99; */
-}
 
-.exp-box {
   display: grid;
   grid-template-columns: 2fr 5fr;
   gap: 3rem;
@@ -416,7 +412,7 @@ body {
   /* To match card 1 */
   /* transform: translateX(-2%); */
 
-  transition: all 0.4s;
+  /* opacity: 1; */
 }
 
 .exp-title--box {
@@ -544,7 +540,7 @@ body {
 }
 
 .contact-box--background::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -577,11 +573,11 @@ body {
   font-size: 3.6rem;
 }
 
-form[name="contact-form"] {
+form[name='contact-form'] {
   width: 90%;
 }
 
-form[name="contact-form"] label {
+form[name='contact-form'] label {
   display: block;
   font-size: 2rem;
   margin-bottom: 0.6rem;
@@ -710,8 +706,14 @@ form[name="contact-form"] label {
 }
 
 .hideup {
-  display: none;
+  /* display: none; */
   transform: translateY(-150%);
+  max-height: 0;
+  padding: 0;
+  visibility: hidden;
+
+  opacity: 0;
+  transition: opacity 1s, visibility 0s;
 }
 
 .grid {
@@ -728,9 +730,6 @@ form[name="contact-form"] label {
 
 section {
   margin-bottom: 6.4rem;
-}
-
-.unselectable {
 }
 
 /* CAROUSEL BUTTONS */
